[package]
name = "bitcoinpir-oram"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BitcoinPIR-shaped disk-backed Path ORAM prototype"
repository = "https://github.com/bitcoinpir/oram"

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
